@@ -6,7 +6,7 @@ brackup - do a backup using Brackup
 
 =head1 SYNOPSIS
 
- $ brackup --from=<source_name> --to=<target_name> --output=my_backup.brackup
+ $ brackup [-v] --from=<source> --to=<target> [--output=my_backup.brackup] [--save-stats]
 
 =head2 OPTIONS
 
@@ -14,19 +14,26 @@ brackup - do a backup using Brackup
 
 =item --from=NAME
 
-Required.  The source of your backup.  Must match a [SOURCE:NAME]
+Required.  The source or root of your backup.  Must match a [SOURCE:NAME]
 config section in your ~/.brackup.conf (which is auto-created for you
-on first run, so then you just have to go modify it)
+on first run, so then you just have to go modify it). See L<Brackup::Root>
+for more.
 
 =item --to=NAME
 
-Required.  The destination for your backup.  Must match a [TARGET:NAME]
-config section in your ~/.brackup.conf
+Required.  The destination or target for your backup.  Must match a 
+[TARGET:NAME] config section in your ~/.brackup.conf. See L<Brackup::Target>
+for more.
 
 =item --output=FILE
 
-Option.  Defaults to "source-YYYYMMDD.brackup".  This is the "metafile" index
-you'll need to restore.
+Optional.  Defaults to "source-target-YYYYMMDD.brackup".  This is the 
+"metafile" index you'll need to do a restore.
+
+=item --save-stats[=FILE]
+
+Optional.  Flag to indicate that stats output should be recorded to a
+file. If =FILE is omitted, defaults to "source-target-YYYYMMDD.stats."
 
 =item --verbose|-v
 
@@ -46,6 +53,10 @@ L<Brackup::Manual::Overview>
 L<brackup-restore>
 
 L<brackup-target>
+
+L<Brackup::Root>
+
+L<Brackup::Target>
 
 =head1 AUTHOR
 
@@ -69,13 +80,14 @@ use lib "$Bin/lib";
 use Brackup;
 use Brackup::Util qw(noclobber_filename);
 
-my ($src_name, $target_name, $backup_file, $opt_help);
+my ($src_name, $target_name, $backup_file, $stats_file, $opt_help);
 my $opt_dryrun;
 my $opt_verbose;
 my $opt_du_stats;
 my $opt_zenityprogress;
 
 my $config_file = Brackup::Config->default_config_file_name;
+my $arguments = join(' ', @ARGV);
 
 usage() unless
     GetOptions(
@@ -84,6 +96,7 @@ usage() unless
                'verbose'   => \$opt_verbose,
                'zenity-progress' => \$opt_zenityprogress,
                'output=s'  => \$backup_file,
+               'save-stats:s' => \$stats_file,
                'help'      => \$opt_help,
                'dry-run'   => \$opt_dryrun,
                'du-stats'  => \$opt_du_stats,
@@ -137,7 +150,17 @@ $backup_file ||= sprintf("%s-%s-%04d%02d%02d.brackup",
 $backup_file =~ s!^~/!$ENV{HOME}/! if $ENV{HOME};
 $backup_file = "$cwd/$backup_file" unless $backup_file =~ m!^/!;
 
+if (defined $stats_file) {
+  if ($stats_file eq '') {
+    ($stats_file = $backup_file) =~ s/(\.brackup)?$/.stats/;
+  }
+  else {
+    $stats_file = "$cwd/$stats_file" unless $stats_file =~ m!^/!;
+  }
+}
 $backup_file = noclobber_filename($backup_file);
+$stats_file = noclobber_filename($stats_file) if $stats_file;
+
 my $backup = Brackup::Backup->new(
                                   root           => $root,
                                   target         => $target,
@@ -148,8 +171,13 @@ my $backup = Brackup::Backup->new(
 
 if (my $stats = eval { $backup->backup($backup_file) }) {
     warn "Backup complete.\n" if $opt_verbose;
+
+    $stats->set('Run Arguments:' => $arguments);
     if ($opt_dryrun || $opt_verbose) {
         $stats->print;
+    }
+    if ($stats_file) {
+        $stats->print($stats_file);
     }
     exit 0;
 } else {
